Fix CSS formatting by adding missing text-align property for body

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     background-color: bisque;
     font-family:Impact, "Haettenschweiler", 'Arial Narrow Bold', sans-serif ;
+    text-align: center;
 }
 h1 {
     text-align: center;
